// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

generator erd {
  provider = "prisma-erd-generator"
  theme    = "forest"
  output   = "../../../docs/database/schema.md"
}

model Provider {
  id String @id @default(uuid())

  name  String
  phone String?
  notes String?

  defaultInterestRate     Decimal @default(0) @db.Decimal(5, 2)
  defaultCompensationDays Int     @default(0)

  operations Operation[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("providers")
}

model Issuer {
  id             String @id @default(uuid())
  name           String
  normalizedName String @unique

  checks Check[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("issuers")
}

model Operation {
  id String @id @default(uuid())

  /// Prestador responsável pela operação
  providerId String
  provider   Provider @relation(fields: [providerId], references: [id])

  checks Check[]

  closedAt DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("operations")
}

model Check {
  id String @id @default(uuid())

  // Dados informados pelo usuário

  issuerId String
  issuer   Issuer @relation(fields: [issuerId], references: [id])

  bankCode       String /// Código do banco (001, 341, 237...)
  checkNumber    String
  amount         Decimal  @db.Decimal(10, 2) /// Valor bruto do cheque
  interestRate   Decimal  @db.Decimal(5, 2) /// Taxa (% ao mês)
  issueDate      DateTime // Data de emissão do cheque
  dueDate        DateTime /// Data de vencimento
  additionalDays Int /// Dias adicionados manualmente para compensação

  // Dados calculados

  days      Int /// Dias entre a data do cálculo e o vencimento
  totalDays Int /// days + compensationDays
  interest  Decimal @db.Decimal(10, 2) /// Juros calculado para a negociação
  netAmount Decimal @db.Decimal(10, 2) /// Valor líquido recebido

  // Controle

  status       CheckStatus @default(PENDING)
  returnReason String? /// Obrigatório apenas quando status = RETURNED

  operationId String
  operation   Operation @relation(fields: [operationId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("checks")
}

enum CheckStatus {
  PENDING
  COMPENSATED
  RETURNED
}
